WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28731
Setting the volume of a media element has no effect if called too early
https://bugs.webkit.org/show_bug.cgi?id=28731
Summary
Setting the volume of a media element has no effect if called too early
Eric Carlson
Reported
2009-08-25 21:34:05 PDT
On OSX, setting the volume of an audio element before it has loaded metadata has no effect because MediaPlayerPrivate::setVolume() bails if metaDataAvailable() is false. This is unnecessary, it is safe to set the movie volume as soon as the movie exists.
Attachments
proposed patch
(2.80 KB, patch)
2009-08-25 21:56 PDT
,
Eric Carlson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-08-25 21:34:48 PDT
rdar://7170177
Eric Carlson
Comment 2
2009-08-25 21:56:33 PDT
Created
attachment 38596
[details]
proposed patch
Eric Carlson
Comment 3
2009-08-25 22:14:09 PDT
http://trac.webkit.org/changeset/47771
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug